<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/sjsu_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Service App"
            android:gravity="center_horizontal"
            android:paddingBottom="50dp"
            android:textSize="@dimen/font_medium"
            android:typeface="serif"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/logo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satext"
            android:paddingBottom="150dp"
            android:typeface="serif"
            android:textColor="@color/black"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="40dp"
            />
        <Button
            android:id="@+id/pref"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAlignment="gravity"
            android:gravity="center"
            android:text="@string/pdfdownload"
            android:onClick="pdfdownload"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:background="@color/yellow"
            android:layout_marginTop="250dp"
            />
        <Button
        android:id="@+id/close"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/close"
        android:layout_marginTop="450dp"
        android:onClick="close"
        android:background="@color/yellow"
        android:textColor="@color/black"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        />

    </RelativeLayout>


</LinearLayout>
