<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/sjsu_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PDF Download Activity"
            android:gravity="center_horizontal"
            android:paddingBottom="50dp"
            android:textSize="@dimen/font_medium"
            android:typeface="serif"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/logo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdftext"
            android:paddingBottom="150dp"
            android:typeface="serif"
            android:textColor="@color/black"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="40dp"
            />
        <TextView
            android:id="@+id/pdf1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf1"
            android:paddingBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="180dp"/>

        <EditText
            android:id="@+id/pdf1val"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:layout_marginTop="170dp"
            android:layout_toRightOf="@id/pdf1"
            android:inputType="textWebEmailAddress"
            android:background="@color/white"
            android:layout_marginRight="20dp"/>
        <TextView
            android:id="@+id/pdf2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf2"
            android:paddingBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="240dp"/>

        <EditText
            android:id="@+id/pdf2val"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:layout_marginTop="230dp"
            android:layout_toRightOf="@id/pdf2"
            android:inputType="textWebEmailAddress"
            android:background="@color/white"
            android:layout_marginRight="20dp"/>
        <TextView
            android:id="@+id/pdf3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf3"
            android:paddingBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="300dp"/>

        <EditText
            android:id="@+id/pdf3val"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:layout_marginTop="290dp"
            android:layout_toRightOf="@id/pdf3"
            android:inputType="textWebEmailAddress"
            android:background="@color/white"
            android:layout_marginRight="20dp"/>
        <TextView
            android:id="@+id/pdf4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf4"
            android:paddingBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="360dp"/>

        <EditText
            android:id="@+id/pdf4val"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:layout_marginTop="350dp"
            android:layout_toRightOf="@id/pdf4"
            android:inputType="textWebEmailAddress"
            android:background="@color/white"
            android:layout_marginRight="20dp"/>
        <TextView
            android:id="@+id/pdf5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf1"
            android:paddingBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="420dp"/>

        <EditText
            android:id="@+id/pdf5val"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:layout_marginTop="410dp"
            android:layout_toRightOf="@id/pdf5"
            android:inputType="textWebEmailAddress"
            android:background="@color/white"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/close"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/start"
            android:layout_marginTop="470dp"
            android:onClick="startDownload"
            android:background="@color/yellow"
            android:textColor="@color/black"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            />

    </RelativeLayout>


</LinearLayout>
